Fixed bug: Front card shows on top back cards are invisible

--- a/ToDuo/Content/Custom/Index/Dashboard.css
+++ b/ToDuo/Content/Custom/Index/Dashboard.css
@@ -198,13 +198,22 @@ hr {
     font-weight: bold;
     letter-spacing: .75px;
 }
-#SwipeDetailsContainer {
+
+.FrontCard {
+   visibility: visible;
+}
+
+.Backcard {
+    visibility: hidden;
+}
+
+.SwipeDetailsContainer {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 10px;
     border-radius: 0px 0px 5px 5px;
     max-height: 220px;
 
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 #SwipeDetails {
     font-weight: 600;
